<resources>
    <string name="app_name">GitAwesome</string>
    <string name="photo1">Developer Planning</string>
    <string name="landingText">GitAwesome</string>
    <string name="loginButton">Login</string>
    <string name="aboutButton">About</string>
    <string name="searchGitButton">Search Github</string>
    <string name="searchMeetupButton">Search MeetUps</string>
    <string name="searchLanguage">Enter Coding Language</string>
    <string name="searchZip">Enter Zip Code</string>
    <string name="loginPassword">Password</string>
    <string name="loginUsername">Username</string>
    <string name="loginHeader">Log In to GitAwesome!</string>
    <string name="signInButton">Sign In</string>
    <string name="hiddenText">Username and password are:\n \"user\" and \"password\"</string>
    <string name="userPlaceholder">Invalid Github Username!</string>
    <string name="locationPlaceholder">No Location</string>
    <string name="saved">Saved Languages</string>
    <string name="profileImage">Profile Picture</string>
    <string name="errorMessage">Sorry, there are no repositories using that language.\nUse search icon at the top right of the screen to try again.</string>
    <string name="aboutText">GitAwesome is a little app I wrote while at Epicodus. This app will allow you to search and save popular repositories on Github. I was inspired to write the app because I\'m always looking for new ideas or tools on Github!</string>
    <string name="aboutLinkText">View GitHub Repo!</string>
    <string name="alreadyHave">Already have an account? Log in here!</string>
    <string name="createAccountHeader">Create Account!</string>
    <string name="signUp">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="github_username">Github Username</string>
    <string name="zip_code">Zip Code (For Local Meetups)</string>
    <string name="no_account">Don\'t have an account? Sign up here!</string>
    <string name="menu_logout">Logout</string>
    <string name="create_dialog">Gitting Awesome!</string>
    <string name="create_dialog2">Authenticating with Firebase…</string>
    <string name="create_dialog3">Loading your awesome details!</string>
    <string name="search_language">Search New Language</string>
    <string name="saved_gits">Saved Gits</string>
    <string name="saved_meetups">Saved Meetups</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_repos">No Repositories</string>
    <string name="no_bio">No Github Bio</string>
    <string name="no_followers">No Followers</string>
    <string name="change_username">Change Github Username</string>
    <string name="more_icon">More Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="overlay_3_dots">Tap on the 3 dots to logout.</string>
    <string name="overlay_search">Tap the search icon to change your saved github username.</string>
    <string name="overlay_profile_image">Fling your Profile picture to go to your profile on github.</string>
    <string name="overlay_dismiss">Double tap to dismiss this message.</string>
    <string name="overlay_checkbox">Check if you don’t want to see this help again.</string>
    <string name="github_avatar">Github Avatar</string>
    <string name="help">Help</string>
</resources>
